# sunbeam

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.history/src/snakemake_logger_plugin_sunbeam/: __init___20260424113139.py  __init___20260424125510.py  __init___20260424130235.py  __init___20260424130238.py  __init___20260424130427.py  __init___20260424130428.py  demo_20260424125556.py
src/snakemake_logger_plugin_sunbeam/: __init__.py  _handler.py  demo.py  rendering.py  settings.py  state.py
tests/: test_handler.py  test_smoke.py
