[project]
name = "snakemake-logger-plugin-sunbeam"
version = "0.1.0"
description = "A beautiful and informative logger for snakemake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=15.0.0",
    "snakemake-interface-logger-plugins>=2.0.1",
]

[project.entry-points."snakemake_logger_plugins"]
snakemake_logger_plugin_sunbeam = "snakemake_logger_plugin_sunbeam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snakemake_logger_plugin_sunbeam"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
