[project]
name = "snakemake-logger-plugin-sunbeam"
version = "0.1.0"
description = "A beautiful and informative terminal logger plugin for Snakemake"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nick Koranda", email = "nicholas.koranda@gmail.com" }]
requires-python = ">=3.11"
keywords = ["snakemake", "logger", "plugin", "rich", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "rich>=15.0.0,<16",
    "snakemake-interface-logger-plugins>=2.0.1,<3",
]

[project.urls]
Homepage = "https://github.com/nkoranda/sunbeam"
Repository = "https://github.com/nkoranda/sunbeam"
Issues = "https://github.com/nkoranda/sunbeam/issues"

[project.entry-points."snakemake_logger_plugins"]
snakemake_logger_plugin_sunbeam = "snakemake_logger_plugin_sunbeam"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snakemake_logger_plugin_sunbeam"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name (l, O, etc.) — too noisy for existing code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]   # redefined-while-unused (fixture shadowing is fine in pytest)
